# copter_arm

./: .gitignore  .gitmodules  Makefile  README.md
gui/: copter_arm.ui  copter_arm_control.py  main_window.py  periodic.py
linker/: stm32f767ZI.ld
optimization/: optimize_poles.py
server/: README  cobs.js  server.js
src/: FreeRTOSConfig.h  cobs.c  cobs.h  copter.c  copter.h  crc32.c  crc32.h  main.c  pid_config.h  pid_control.c  pid_control.h  usart.c  usart.h
src/CMSIS/ST/: startup_stm32f767xx.s
tests/: CMakeLists.txt  test_cobs.c  test_crc32.c
